# lucky-wol-agent

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
