[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
cipher = { version = "0.4", features = ["alloc", "block-padding"] }
des = "0.8"
dirs = "6"
ecb = "0.1"
futures-util = "0.3"
hostname = "0.4"
log = "0.4"
mac_address = "1"
network-interface = "2"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-log = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-native-tls = "0.3"
tokio-tungstenite = { version = "0.28", features = ["connect", "native-tls"] }
uuid = { version = "1", features = ["serde", "v4"] }
